<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('kategoris', function (Blueprint $table) {
            $table->id();
            $table->string('prefix_sku', 10)->unique();
            $table->string('nama_kategori')->unique(); // Tidak boleh ada nama kategori ganda
            $table->text('deskripsi')->nullable();     // Boleh dikosongkan
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('kategoris');
    }
};