erDiagram

    USERS {
        bigint id PK
        varchar name
        varchar email
        enum role
        timestamp email_verified_at
        varchar password
        timestamp created_at
        timestamp updated_at
    }

    SUPPLIERS {
        bigint id PK
        varchar nama_supplier
        text alamat
        varchar nama_pic
        varchar no_hp
        varchar email
        varchar kategori_suplai
        varchar termin_default
        varchar nama_bank
        varchar no_rekening
        text catatan
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    KATEGORIS {
        bigint id PK
        varchar prefix_sku
        varchar nama_kategori
        text deskripsi
        timestamp created_at
        timestamp updated_at
    }

    PRODUCTS {
        bigint id PK
        bigint kategori_id FK
        varchar sku
        varchar barcode
        varchar nama_barang
        int stok
        int lead_time_hari
        enum tipe_safety_stock
        int safety_stock
        int reorder_point
        bigint harga_beli
        bigint harga_jual
        varchar satuan
        timestamp created_at
        timestamp updated_at
    }

    TRANSACTIONS {
        bigint id PK
        varchar no_transaksi
        enum jenis_transaksi
        date tanggal
        bigint supplier_id FK
        bigint user_id FK
        varchar no_referensi
        varchar tujuan
        varchar kategori_keluar
        date estimasi_datang
        varchar tipe_pembayaran
        varchar info_pengiriman
        decimal total_nilai
        text catatan
        enum status
        timestamp created_at
        timestamp updated_at
    }

    TRANSACTION_ITEMS {
        bigint id PK
        bigint transaction_id FK
        bigint product_id FK
        int qty
        int qty_rusak
        decimal harga_satuan
        decimal diskon
        decimal subtotal
        varchar spesifikasi
        date tgl_expired
        timestamp created_at
        timestamp updated_at
    }

    STOCK_OPNAMES {
        bigint id PK
        varchar no_opname
        date tanggal
        varchar periode
        bigint dibuat_oleh FK
        bigint disetujui_oleh FK
        enum status
        text catatan
        timestamp created_at
        timestamp updated_at
    }

    STOCK_OPNAME_DETAILS {
        bigint id PK
        bigint stock_opname_id FK
        bigint product_id FK
        int stok_sistem
        int stok_fisik
        int selisih
        bigint harga_pokok_snapshot
        bigint nilai_selisih
        varchar keterangan
        timestamp created_at
        timestamp updated_at
    }

    MESSAGES {
        bigint id PK
        bigint from_user_id FK
        text content
        timestamp created_at
        timestamp updated_at
    }

    MESSAGE_READS {
        bigint id PK
        bigint message_id FK
        bigint user_id FK
        timestamp created_at
        timestamp updated_at
    }

    STORE_PROFILES {
        bigint id PK
        varchar nama_toko
        varchar tagline
        text alamat
        varchar telepon
        varchar email
        varchar kota_ttd
        varchar nama_kepala_gudang
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    KATEGORI_OUTBOUNDS {
        bigint id PK
        varchar nama_kategori
        timestamp created_at
        timestamp updated_at
    }

    %% ==========================================
    %% RELASI
    %% ==========================================

    %% MASTER DATA
    KATEGORIS ||--o{ PRODUCTS : memiliki
    SUPPLIERS ||--o{ TRANSACTIONS : memiliki

    %% TRANSAKSI
    USERS ||--o{ TRANSACTIONS : mencatat
    TRANSACTIONS ||--o{ TRANSACTION_ITEMS : berisi
    PRODUCTS ||--o{ TRANSACTION_ITEMS : tercantum

    %% STOCK OPNAME
    USERS ||--o{ STOCK_OPNAMES : membuat
    USERS ||--o{ STOCK_OPNAMES : menyetujui
    STOCK_OPNAMES ||--o{ STOCK_OPNAME_DETAILS : berisi
    PRODUCTS ||--o{ STOCK_OPNAME_DETAILS : tercantum

    %% CHAT
    USERS ||--o{ MESSAGES : mengirim
    MESSAGES ||--o{ MESSAGE_READS : dibaca
    USERS ||--o{ MESSAGE_READS : membaca
